--- a/manager.html
+++ b/manager.html
@@ -33,6 +33,8 @@
       }, 1000)
 
       button.onclick = () => {
+        button.classList.add('disabled')
+
         fetch('https://devapi.khlebniy.com.ua/promo/365', {
           method: 'PATCH',
           headers: {
@@ -44,6 +46,10 @@
           .then(response => response.json())
           .then(json => (daysLeft = json.data))
           .then((counter.textContent = daysLeft))
+
+        setTimeout(() => {
+          button.classList.remove('disabled')
+        }, 3000)
       }
     </script>
   </body>
